# tatneft-test-task

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
app/: settings.py
app/api/: urls.py
app/api/auth/: urls.py
app/api/metrics/: serializers.py  urls.py  views.py
app/core/: admin.py  apps.py  consts.py  models.py  tasks.py
app/core/management/commands/: setup_data.py
app/core/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
tests/: conftest.py
tests/api/: test_metrics.py
